--- a/views/header.ejs
+++ b/views/header.ejs
@@ -31,7 +31,7 @@
     <% } %>
     <% if (typeof userRole !== 'undefined' && userRole!="visitor") { %>
         <% if(typeof userRole !== 'undefined' && userRole=="admin"){ %>
-        <a href="register">Add acconet</a>
+        <a href="register">Add acoount</a>
         <% } %>
     <form action="/logout" method="POST">
         <button type="submit" class="btn btn-outline-light">Logout</button>
