--- a/views/register.ejs
+++ b/views/register.ejs
@@ -59,7 +59,7 @@
                             </div>
                           <% } else { %>
                             <!-- Note: No need to provide a name attribute if you're going to set the role to "visitor" in the backend -->
-                            <input type="hidden" name="role" value="visitor" autocomplete="off">
+                            <input type="hidden" name="role" value="user" autocomplete="off">
                           <% } %>
 
                           <button type="submit">Register</button>
