--- a/SWE363 Project/css/base.css
+++ b/SWE363 Project/css/base.css
@@ -398,6 +398,7 @@ body #cdawrap {
 	width: calc(1 / var(--grid-inner-scale) * 100%);
 	height: calc(1 / var(--grid-inner-scale) * 100%);
 	background-size: cover;
+	opacity: 0.8;
 	background-position: 50% 50%;
 }
 
