--- a/views/events.ejs
+++ b/views/events.ejs
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="covregeCard.css">
 
         <style>
-                    main {
+        main {
             display: block;
         }
 
@@ -117,8 +117,8 @@
                     </p>
             
                     <div class="cardDetails">
-                        <span>Date: <%= event.date %></span>
-                        <span>Time: <%= event.time %></span>
+                        <span>Date: <%= event.event_date %></span>
+                        <span>Time: <%= event.event_time %></span>
                         <span>Location: <%= event.location %></span>
                     </div>
                 </div>
